# Abhaydhir

./: .gitignore  Mnjk45
.github/workflows/: deploy.yml
app-flutter/: pubspec.yaml
app-flutter/android/: gradle.properties
app-flutter/lib/: main.dart
backend-fastapi/: .env.example  README.md  analyze_template.py  camera_schema.sql  main.py  old_models.sql  pyproject.toml  supabase_rpc_event_summary.sql  supabase_rpc_get_event_analytics.sql  supabase_rpc_get_tourist_complete.sql  supabase_rpc_get_tourist_with_related.sql  supabase_rpc_get_tourists_by_event.sql  supabase_rpc_verify_qr.sql  template_generator.py  test_jwt_token_api.py
backend-fastapi/routes/: admin_route.py  analytics_route.py  camera_route.py  entry_route.py  event_register.py  feedback_route.py  quick_route.py  short_links_route.py  sms_route.py  tourist_profile_route.py  tourist_route.py  users_route.py
backend-fastapi/template/: view_card.html
backend-fastapi/utils/: india_time.py  security.py
backend-fastapi/utils/models/: api_models.py
backend-fastapi/utils/services/: camera_manager.py  card_cache.py  email_handler.py  file_handlers.py  jwt_file_token.py  public_access_link_provider.py  redis_client.py  sms_handler.py
backend-fastapi/utils/supabase/: auth.py  auth_key.py  query_helper.py  supabase.py
web-next/: package.json  pnpm-lock.yaml  tailwind.config.js
web-next/app/: page.tsx
web-next/components/: download_card.tsx  loading-bar.tsx
web-next/context/: admin_context.tsx
web-next/lib/: cameraSocket.ts  fingerprint.ts  supabase.ts
web-next/services/: adminApi.ts  (+6 more)
(+50 files in other folders)
